# fivem-kvs-explorer

./: .gitignore  README.md  package.json  vercel.json
.claude/: launch.json
.github/workflows/: deploy.yml
kvs-core/: Cargo.toml
kvs-core/src/: lib.rs  wasm.rs
kvs-core/tests/: compat.rs
kvs-core/tests/fixtures/sample-kvs/: 000005.ldb
tools/: wasm-smoke.cjs
tools/gen-fixture/: gen.mjs  package.json
web/: README.md  package.json  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: json.ts  kvs.ts  types.ts
web/src/lib/components/: AddEntryDialog.svelte  EntryList.svelte  FolderDrop.svelte  Icon.svelte  ImportDialog.svelte  JsonEditor.svelte  ResourceTree.svelte  Splitter.svelte  UnsupportedBrowser.svelte  ValueDetail.svelte  VirtualList.svelte
web/src/lib/wasm/: kvs_core.d.ts  kvs_core.js  kvs_core_bg.wasm  kvs_core_bg.wasm.d.ts  package.json
web/src/routes/: +layout.svelte  +layout.ts  +page.svelte
web/static/sample/: LOG  MANIFEST-000002  manifest.json
