[package]
name = "kvs-core"
version = "0.1.0"
edition = "2021"
description = "Portable core for reading/writing FiveM KVS (a LevelDB database) — usable natively and as wasm."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
# Pure-Rust LevelDB, on-disk compatible with C++ LevelDB. default-features = false
# drops the disk env (fs2/errno) so it builds for wasm32; we always use MemEnv.
rusty-leveldb = { version = "4", default-features = false }
# Dynamic msgpack values — FiveM stores KVP values msgpack-encoded.
rmpv = "1"

[dev-dependencies]
# Tests construct/encode msgpack values directly.
rmpv = "1"

# wasm-only bindings/glue (added in Phase 1). getrandom's `js` feature is
# required for `rand` -> getrandom on wasm32-unknown-unknown.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
